[package]
authors = ["Sebastian Wicki <swicki@inf.ethz.ch>"]
name = "topology_generator"
version = "0.1.1"

[dependencies]
rand = "0.3.17"
timely = "0.3.0"
abomonation = "0.4.6"
abomonation_derive = "0.2.2"
serde = "1.0"
serde_derive = "1.0"
typename = "0.1"
futures = "0.1"
tokio-timer = "0.1"

[dependencies.strymon_job]
path = "../../src/strymon_job"

[dependencies.strymon_communication]
path = "../../src/strymon_communication"
