[package]
authors = ["Sebastian Wicki <swicki@student.ethz.ch>"]
name = "sessionize-shared"
version = "0.1.0"

[dependencies]
abomonation = "0.4"
libc = "0.2"
log = "0.3.6"
time = "0.1"
timely = "0.1.15"
walkdir = "0.1"

[dependencies.logparse]
path = "../trace-analyzer/amadeus/logparse"

[dependencies.sessionize]
path = "../trace-analyzer/amadeus/sessionize"

[dependencies.timely-contrib]
path = "../trace-analyzer/timely-contrib"

[dependencies.timely-query]
path = "../.."

[profile.release]
# for debugging symbols in perf
#debug = true
#lto = false
