[package]
authors = ["Sebastian Wicki <swicki@inf.ethz.ch>"]
name = "strymon_cli"
version = "0.1.2"

[[bin]]
name = "strymon"
path = "src/main.rs"

[dependencies]
clap = "2.29"
log = "0.4"
env_logger = "0.5"
error-chain = "0.11.0"
futures = "0.1"
serde = "1.0"
serde_json = "1.0"

[dependencies.strymon_communication]
path = "../strymon_communication/"

[dependencies.strymon_model]
path = "../strymon_model/"

[dependencies.strymon_rpc]
path = "../strymon_rpc/"

[dependencies.strymon_coordinator]
path = "../strymon_coordinator/"

[dependencies.strymon_executor]
path = "../strymon_executor/"
