[package]
authors = ["Sebastian Wicki <swicki@inf.ethz.ch>"]
name = "strymon_communication"
version = "0.1.2"

[features]
default = []
# enables the `MessageBuf::debug()` printer
tracing = ["rmpv"]

[dependencies]
byteorder = "1.0"
bytes = "0.4"
futures = "0.1"
log = "0.4"
rmp-serde = "0.13"
rmpv = { version = "0.4", optional = true }
serde = "1.0"

[dev-dependencies]
serde_derive = "1.0"
