[package]
name = "strymon_coordinator"
version = "0.1.0"
authors = ["Sebastian Wicki <swicki@inf.ethz.ch>"]

[dependencies]
log = "0.4"
futures = "0.1"
rand = "0.3"
tokio-core = "0.1"

[dependencies.strymon_communication]
path = "../strymon_communication/"

[dependencies.strymon_model]
path = "../strymon_model/"

[dependencies.strymon_rpc]
path = "../strymon_rpc/"
