[package]
authors = ["Sebastian Wicki <swicki@inf.ethz.ch>"]
name = "strymon_job"
version = "0.1.2"

[dependencies]
futures = "0.1.16"
log = "0.3"
serde = "1.0"
serde_derive = "1.0.23"
slab = "0.4.0"
timely = "0.3.0"
timely_communication = "0.1.8"
tokio-core = "0.1.10"
typename = "0.1"

[dependencies.strymon_communication]
path = "../strymon_communication/"

[dependencies.strymon_model]
path = "../strymon_model/"

[dependencies.strymon_rpc]
path = "../strymon_rpc/"

[dev-dependencies]
serde_test = "1.0"
