[package]
authors = ["Sebastian Wicki <swicki@inf.ethz.ch>"]
name = "strymon_job"
version = "0.2.0"

[dependencies]
futures = "0.1"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
slab = "0.4.0"
timely = "0.5.0"
timely_communication = "0.5"
tokio-core = "0.1"
typename = "0.1"

[dependencies.strymon_communication]
path = "../strymon_communication/"

[dependencies.strymon_model]
path = "../strymon_model/"

[dependencies.strymon_rpc]
path = "../strymon_rpc/"
