[package]
authors = ["Sebastian Wicki <swicki@inf.ethz.ch>"]
name = "strymon_rpc"
version = "0.2.0"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
enum-primitive-derive = "0.1"
num-traits = "0.1"
typename = "0.1"

[dependencies.strymon_communication]
path = "../strymon_communication/"

[dependencies.strymon_model]
path = "../strymon_model/"
