[package]
authors = ["Sebastian Wicki <swicki@inf.ethz.ch>"]
name = "strymon_runtime"
version = "0.1.0"

[[bin]]
name = "strymon"
path = "src/bin/main.rs"

[dependencies]
abomonation = "0.4.6"
abomonation_derive = "0.2.2"
clap = "~2.26.2"
env_logger = "0.4"
error-chain = "0.11.0"
futures = "0.1"
log = "0.3"
rand = "0.3.14"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.4"
timely = "0.3.0"
timely_communication = "0.1.8"
tokio-core = "0.1"
named_type = "0.1.3"
named_type_derive = "0.1.3"

[dependencies.strymon_communication]
path = "../strymon_communication/"
