[package]
authors = ["Sebastian Wicki <swicki@inf.ethz.ch>"]
name = "strymon_runtime"
version = "0.1.0"

[[bin]]
name = "strymon"
path = "src/bin/main.rs"

[dependencies]
clap = "~2.26.2"
env_logger = "0.4"
error-chain = "0.11.0"
futures = "0.1.16"
log = "0.3"
rand = "0.3.14"
serde = "1.0"
serde_json = "1.0.4"
timely = "0.3.0"
timely_communication = "0.1.8"
tokio-io = "0.1"
tokio-core = "0.1.10"
tokio-process = "0.1.4"
tokio-signal = "0.1.2"

[dependencies.strymon_communication]
path = "../strymon_communication/"

[dependencies.strymon_model]
path = "../strymon_model/"

[dependencies.strymon_rpc]
path = "../strymon_rpc/"
