[package]
authors = ["Sebastian Wicki <swicki@inf.ethz.ch>"]
name = "simple-pubsub"
version = "0.1.0"

[dependencies]
timely = "0.5"
serde = "1"
serde_derive = "1"
typename = "0.1"
futures = "0.1"

[dependencies.strymon_job]
path = "../../src/strymon_job"

[dependencies.strymon_communication]
path = "../../src/strymon_communication"
